# myreactor

./: .env  .env-example  .gitignore  Pipfile  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
casestudy/: admin.py  models.py  solvers.py
casestudy/migrations/: 0001_initial.py
config/: __init__.py  urls.py  wsgi.py
config/settings/: base.py  prod.py
core/: forms.py  models.py  urls.py  views.py
core/static/css/: styles.css
core/static/js/: play.js
core/templates/: base.html
core/templates/core/: base.html  index.html  info.html  play.html  playground.html
myreactor/: apps.py  forms.py  settings.py  urls.py  views.py  wsgi.py
myreactor/casestudy/: apps.py  models.py  solvers.py
myreactor/casestudy/migrations/: 0001_initial.py  0002_alter_casestudy_id.py
myreactor/players/: admin.py  apps.py  models.py
myreactor/players/migrations/: 0001_initial.py  (+1 more)
myreactor/scores/: apps.py  models.py
player/: models.py
player/migrations/: 0001_initial.py
players/: models.py
players/migrations/: 0001_initial.py  0002_auto_20190314_0820.py  0003_auto_20190314_0849.py
reactions/: models.py
reactions/migrations/: 0001_initial.py
reactors/: apps.py  models.py
reactors/migrations/: 0001_initial.py
score/: models.py
score/migrations/: 0001_initial.py
scores/: models.py
scores/migrations/: 0001_initial.py  0002_auto_20190315_1324.py
server/nginx/: myreactor
server/systemd/: myreactor-gunicorn.service  myreactor-gunicorn.socket
sim/: models.py
sim/migrations/: 0001_initial.py
staticfiles/css/: styles.css
(+9 files in other folders)
