[project]
name = "myreactor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-bootstrap4>=2024.10",
    "django>=5.1.6",
    "django-crispy-forms>=2.3",
    "django-environ>=0.12.0",
    "django-extensions>=3.2.3",
    "gunicorn>=23.0.0",
    "ipython>=9.0.1",
    "numpy>=2.2.3",
    "scipy>=1.15.2",
    "sentry-sdk>=2.22.0",
]
